--- a/source/projects/schedext_based_scheduling.qmd
+++ b/source/projects/schedext_based_scheduling.qmd
@@ -42,10 +42,8 @@ See [project Ilúvatar](iluvatar.qmd) for details about the control plane.
 
 # Metadata Driven Policy      
 
-The idea is that the metadata of the functions available to the Control Plane can be used to hint the 
-CPU scheduler to make better scheduling decisions.
-With the help of SchedExt framework, we can develop sophisticated scheduling policies that are tightly 
-integrated with the control plane.
+The idea is to take advantage of tight coupling of Control Plane and the scheduling policy by using 
+metadata of the functions to hint the CPU scheduler to make better scheduling decisions.
 
 [Proof of Concept:](https://github.com/abrehman94/iluvatar-faas/blob/finescheduling/src/Il%C3%BAvatar/fs_policy_tsksz/src/bpf/main.bpf.c)
 A task size interval assignment policy that is driven by 
