--- a/source/projects/iluvatar.qmd
+++ b/source/projects/iluvatar.qmd
@@ -49,8 +49,8 @@ Priority based queueing schemes using execution time and IAT.
   * earliest virtual deadline first based priority queue using code execution time to decide the deadline - [implementation](https://github.com/abrehman94/iluvatar-faas/blob/finescheduling/src/Il%C3%BAvatar/iluvatar_worker_library/src/services/invocation/queueing/minheap_ed.rs)  
   * most frequent function first based priority queue using IAT - [implementation](https://github.com/abrehman94/iluvatar-faas/blob/finescheduling/src/Il%C3%BAvatar/iluvatar_worker_library/src/services/invocation/queueing/minheap_iat.rs) 
 
-Added support to run the control plane on Jetson Orin. It involved rebuilding the functions the arm platform, adding support 
-to capture utilization logs from the jtop utility and setting up 1 TB NVMe to enable hosting large number of containers. 
+I added support for running the control plane on Jetson Orin. 
+It involved rebuilding the functions for ARM platform, capture utilization logs from the jtop utility and setting up 1 TB NVMe on the device to enable hosting large number of containers. 
 
 ### References
 
