--- a/source/index.qmd
+++ b/source/index.qmd
@@ -35,6 +35,7 @@ I enjoy diving deep into complex problems, trying to find the last ounce of perf
   * [CV](./data/resume.pdf)
   * [Github Profile](https://github.com/abrehman94)
   * [Google Scholar Profile](https://scholar.google.com/citations?user=8LD5hmQAAAAJ&hl=en&oi=sra)
+  * [LinkedIn](https://www.linkedin.com/in/abdulrehman010/)
 
 # Research Focus
 
