--- a/source/index.qmd
+++ b/source/index.qmd
@@ -37,6 +37,8 @@ I enjoy diving deep into complex problems, trying to find the last ounce of perf
   * [Google Scholar Profile](https://scholar.google.com/citations?user=8LD5hmQAAAAJ&hl=en&oi=sra)
   * [LinkedIn](https://www.linkedin.com/in/abdulrehman010/)
 
+Seeking a Summer 2025 Systems Research Internship.
+
 # Research Focus
 
 Currently, I am trying to improve the performance of a 
