--- a/source/index.qmd
+++ b/source/index.qmd
@@ -39,7 +39,7 @@ I enjoy diving deep into complex problems, trying to find the last ounce of perf
   * [Google Scholar Profile](https://scholar.google.com/citations?user=8LD5hmQAAAAJ&hl=en&oi=sra)
   * [LinkedIn](https://www.linkedin.com/in/abdulrehman010/)
 
-**Seeking a Summer 2025 Internship in the area of Systems (eBPF, Rust, Linux, Cloud).**
+**Seeking a Summer 2025 Internship in the area of Systems (eBPF, Rust, Linux Kernel, Cloud, Performance).**
 
 # Research Focus
 
